--- a/common/public/message.html
+++ b/common/public/message.html
@@ -7,25 +7,26 @@
     <title>{{.title}}</title>
     <meta name="description" content="{{.description}}">
 </head>
-<body>
-
-<div>
-    <div class="article-container" style="max-width: 960px">
-        <div class="columns is-desktop">
-            <div class="column">
-                <article id="article">
-                    <h1 class="title is-3 is-4-mobile">{{.title}}</h1>
-                    <div class="info">
-                        <span class="line">发布于：<span class="tag is-light">{{.time}}</span></span>
-                    </div>
-                    <blockquote>
-                        {{.description | unescape}}
-                    </blockquote>
+<body class="liquid-glass-container">
+    <div class="wrapper">
+        <!-- Liquid Glass Card -->
+        <div class="liquid-glass" style="position: relative; overflow: hidden;">
+            <!-- Edge Highlight Effect -->
+            <div class="liquid-glass-highlight"></div>
+            
+            <article id="article">
+                <h1 class="title">{{.title}}</h1>
+                <div class="info">
+                    <span class="line">发布于：<span class="liquid-glass-pill">{{.time}}</span></span>
+                </div>
+                <blockquote>
+                    {{.description | unescape}}
+                </blockquote>
+                <div class="content-body">
                     {{.content | unescape}}
-                </article>
-            </div>
+                </div>
+            </article>
         </div>
     </div>
-</div>
 </body>
 </html>
