style(ui): 将主题从液态玻璃更新为新拟态设计并替换仓库链接
- 将整体 UI 主题从液态玻璃效果更改为新拟态（Neumorphism）设计风格
- 更新所有 GitHub 仓库链接至新组织地址
- 简化页脚信息，移除作者和许可证声明
- 调整消息页面的 HTML 结构和样式以匹配新设计

--- a/common/public/message.html
+++ b/common/public/message.html
@@ -7,26 +7,25 @@
     <title>{{.title}}</title>
     <meta name="description" content="{{.description}}">
 </head>
-<body class="liquid-glass-container">
-    <div class="wrapper">
-        <!-- Liquid Glass Card -->
-        <div class="liquid-glass" style="position: relative; overflow: hidden;">
-            <!-- Edge Highlight Effect -->
-            <div class="liquid-glass-highlight"></div>
-            
-            <article id="article">
-                <h1 class="title">{{.title}}</h1>
-                <div class="info">
-                    <span class="line">发布于：<span class="liquid-glass-pill">{{.time}}</span></span>
-                </div>
-                <blockquote>
-                    {{.description | unescape}}
-                </blockquote>
-                <div class="content-body">
+<body>
+
+<div>
+    <div class="article-container" style="max-width: 960px">
+        <div class="columns is-desktop">
+            <div class="column">
+                <article id="article">
+                    <h1 class="title is-3 is-4-mobile">{{.title}}</h1>
+                    <div class="info">
+                        <span class="line">发布于：<span class="tag is-light">{{.time}}</span></span>
+                    </div>
+                    <blockquote>
+                        {{.description | unescape}}
+                    </blockquote>
                     {{.content | unescape}}
-                </div>
-            </article>
+                </article>
+            </div>
         </div>
     </div>
+</div>
 </body>
 </html>
